fixed double scrolling issue

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,18 @@
-body {
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 	background: repeating-linear-gradient(-45deg, #540a00 15px, #660d01 22px, #851101 10px, #330601 11px);
+}
+
+body {
 	font-family: 'Fira Sans', sans-serif;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
 	text-align: center;
-	margin: 0;
-	padding: 0;
 }
 
 .container {
@@ -22,6 +26,7 @@ body {
 	max-width: 900px;
 	min-height: 100vh;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 h1 {
